[WSP-61] Unnecessary --add-opens