@@ -1055,8 +1055,6 @@
                                         -Xmx1024m
                                         -Duser.timezone=Europe/London
                                         -Dfile.encoding=UTF-8
-                                        <!-- for freemarker & taxonomy related errors -->
-                                        --add-opens=java.base/java.util=ALL-UNNAMED
                                         <!-- disabling folder performance improvement -->
                                         -Drepository.folderworkflow.set.hasfolders.property=false
                                     </cargo.jvmargs>
